chore: [#183420663] fixed grey bar alignment on mini roadmap

--- a/web/src/styles/components/stepper.scss
+++ b/web/src/styles/components/stepper.scss
@@ -49,7 +49,7 @@
     height: 0rem;
     z-index: 90;
     background-color: $base-lighter;
-    left: 11px;
+    left: 14px;
   }
 }
 
